Page MenuHome GnuPG

gnupg-1.4.* fails to compile with uClibc (patch to fix it attached)
Closed, ResolvedPublic

Description

When compiling gnupg-1.4.* with uClib it fails with the following error message:

/home/test/test/3/output/host/usr/bin/mipsel-linux-gcc -c
-DLOCALEDIR=\"/usr/share/locale\" -DLOCALE_ALIAS_PATH=\"/usr/share/locale\"
-DLIBDIR=\"/usr/lib\" -DBUILDING_LIBINTL -DBUILDING_DLL -DIN_LIBINTL
-DENABLE_RELOCATABLE=1 -DIN_LIBRARY -DINSTALLDIR=\"/usr/lib\" -DNO_XMALLOC
-Dset_relocation_prefix=libintl_set_relocation_prefix
-Drelocate=libintl_relocate -DDEPENDS_ON_LIBICONV=1 -DHAVE_CONFIG_H -I. -I. -I..
-D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64
-D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -pipe -Os
-Wall -Wno-pointer-sign -fvisibility=hidden log.c
localename.c: In function '_nl_locale_name_thread_unsafe':
localename.c:2619:31: error: dereferencing pointer to incomplete type
/home/test/test/3/output/host/usr/bin/mipsel-linux-gcc -c
-DLOCALEDIR=\"/usr/share/locale\" -DLOCALE_ALIAS_PATH=\"/usr/share/locale\"
-DLIBDIR=\"/usr/lib\" -DBUILDING_LIBINTL -DBUILDING_DLL -DIN_LIBINTL
-DENABLE_RELOCATABLE=1 -DIN_LIBRARY -DINSTALLDIR=\"/usr/lib\" -DNO_XMALLOC
-Dset_relocation_prefix=libintl_set_relocation_prefix
-Drelocate=libintl_relocate -DDEPENDS_ON_LIBICONV=1 -DHAVE_CONFIG_H -I. -I. -I..
-D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64
-D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -pipe -Os
-Wall -Wno-pointer-sign -fvisibility=hidden printf.c
make[3]: *** [localename.o] Error 1

The attached patch fixes the problem.

Event Timeline

vincent set External Link to http://autobuild.buildroot.net/results/a8d/a8df874b051d5a0363718b5f57facfeb8e7aa321/build-end.log.May 19 2014, 12:00 PM
vincent added projects: gnupg, Bug Report.
vincent renamed this task from gnupg-1.4.* fails to compile with uClibc to gnupg-1.4.* fails to compile with uClibc (patch inside).Jun 3 2014, 5:28 PM
vincent renamed this task from gnupg-1.4.* fails to compile with uClibc (patch inside) to gnupg-1.4.* fails to compile with uClibc (patch to fix it attached).
werner claimed this task.

Fix will go into 1.4.17.